[gd_scene load_steps=37 format=3 uid="uid://cfmgsgc4u1jw2"]

[ext_resource type="Script" uid="uid://dn2xyye3lsd5a" path="res://scripts/player.gd" id="1_56udc"]
[ext_resource type="Texture2D" uid="uid://c378r060garon" path="res://assets/player/sp_fall/sp_fall.png" id="2_d7btg"]
[ext_resource type="Texture2D" uid="uid://3v1vlvriqi0h" path="res://assets/player/sp_idle/sp_idle_0000.png" id="2_kwj7h"]
[ext_resource type="Texture2D" uid="uid://746vhb6ubch7" path="res://assets/player/sp_idle/sp_idle_0001.png" id="3_d7btg"]
[ext_resource type="Texture2D" uid="uid://cyujuhe6qh7yn" path="res://assets/player/sp_idle/sp_idle_0002.png" id="4_bxieb"]
[ext_resource type="Script" uid="uid://cb5yms7ebdva3" path="res://scripts/states/player/p_die.gd" id="5_iadup"]
[ext_resource type="Texture2D" uid="uid://2nmv0y5hs5l2" path="res://assets/player/sp_idle/sp_idle_0004.png" id="5_nos2o"]
[ext_resource type="Script" uid="uid://bqgxfle68x2yf" path="res://scripts/states/state_machine.gd" id="5_s7f3b"]
[ext_resource type="Script" uid="uid://bjsrjc103j41m" path="res://scripts/states/player/p_idle.gd" id="6_6unfe"]
[ext_resource type="Texture2D" uid="uid://djgwnusm3m8o2" path="res://assets/player/sp_idle/sp_idle_0005.png" id="6_66bo7"]
[ext_resource type="Texture2D" uid="uid://vg51vhhkucpj" path="res://assets/player/sp_idle/sp_idle_0006.png" id="7_0n276"]
[ext_resource type="Script" uid="uid://bsrmhtmduvfwt" path="res://scripts/states/player/p_run.gd" id="7_pxja8"]
[ext_resource type="Texture2D" uid="uid://php074lxgjhi" path="res://assets/player/sp_idle/sp_idle_0007.png" id="8_dpr6s"]
[ext_resource type="Script" uid="uid://bqwxl81bf401h" path="res://scripts/states/player/p_jump.gd" id="8_pxja8"]
[ext_resource type="Texture2D" uid="uid://d0rxr2jcbxdn7" path="res://assets/player/sp_idle/sp_idle_0009.png" id="9_gyyv3"]
[ext_resource type="Texture2D" uid="uid://77yhgb3c03wt" path="res://assets/player/sp_jump/sp_jump.png" id="11_bxieb"]
[ext_resource type="Script" uid="uid://cbytxgc3ophoe" path="res://scripts/components/health_component.gd" id="11_c4hvp"]
[ext_resource type="Texture2D" uid="uid://jxvup5ix4ng2" path="res://assets/player/sp_run/run_0000.png" id="11_kwd2h"]
[ext_resource type="Script" uid="uid://dwjt6qd64607k" path="res://scripts/attack.gd" id="12_2vlw4"]
[ext_resource type="Texture2D" uid="uid://uo4d4fkho812" path="res://assets/player/sp_run/run_0001.png" id="12_vjh3r"]
[ext_resource type="Texture2D" uid="uid://3e8jjngprqwu" path="res://assets/player/sp_run/run_0002.png" id="13_1hs58"]
[ext_resource type="Texture2D" uid="uid://d126slx6nc1bj" path="res://assets/player/sp_run/run_0003.png" id="14_oi1jg"]
[ext_resource type="Texture2D" uid="uid://cwik3aephgg34" path="res://assets/player/sp_run/run_0004.png" id="15_pkxds"]
[ext_resource type="Texture2D" uid="uid://cmw0roy8kohjp" path="res://assets/player/sp_run/run_0005.png" id="16_b8kkg"]
[ext_resource type="Texture2D" uid="uid://l5kvbtin3fjq" path="res://assets/player/sp_run/run_0006.png" id="17_6rdx2"]
[ext_resource type="Texture2D" uid="uid://b5wy3c568r34q" path="res://assets/player/shadow.png" id="19_0n276"]
[ext_resource type="Script" uid="uid://deoc8bq51pmnd" path="res://scripts/camera_controls.gd" id="19_nos2o"]
[ext_resource type="Script" uid="uid://bd1wjng35sdff" path="res://scripts/camera_follow.gd" id="20_66bo7"]
[ext_resource type="Script" uid="uid://dtmbguol6uyqt" path="res://scripts/components/player_hitbox_component.gd" id="24_bxieb"]
[ext_resource type="Script" uid="uid://bsluy0jer8fnu" path="res://scripts/components/collectable_component.gd" id="27_bxieb"]
[ext_resource type="PackedScene" uid="uid://ran2a6jg0iv0" path="res://scenes/pause_menu.tscn" id="31_dpr6s"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uj7mf"]
radius = 0.50769
height = 1.2050729

[sub_resource type="SpriteFrames" id="SpriteFrames_xc70a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_d7btg")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_kwj7h")
}, {
"duration": 1.0,
"texture": ExtResource("3_d7btg")
}, {
"duration": 2.0,
"texture": ExtResource("4_bxieb")
}, {
"duration": 1.0,
"texture": ExtResource("5_nos2o")
}, {
"duration": 1.0,
"texture": ExtResource("6_66bo7")
}, {
"duration": 1.0,
"texture": ExtResource("7_0n276")
}, {
"duration": 2.0,
"texture": ExtResource("8_dpr6s")
}, {
"duration": 1.0,
"texture": ExtResource("9_gyyv3")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_bxieb")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_kwd2h")
}, {
"duration": 1.0,
"texture": ExtResource("12_vjh3r")
}, {
"duration": 1.0,
"texture": ExtResource("13_1hs58")
}, {
"duration": 1.0,
"texture": ExtResource("14_oi1jg")
}, {
"duration": 1.0,
"texture": ExtResource("15_pkxds")
}, {
"duration": 1.0,
"texture": ExtResource("16_b8kkg")
}, {
"duration": 1.0,
"texture": ExtResource("17_6rdx2")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_0n276"]

[sub_resource type="SphereShape3D" id="SphereShape3D_66bo7"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_joi77"]
height = 1.42044
radius = 0.463379

[node name="PlayerCharacter" type="CharacterBody3D" node_paths=PackedStringArray("DEATH_STATE")]
collision_layer = 2
script = ExtResource("1_56udc")
DEATH_STATE = NodePath("pStateMachine/pDie")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.990367, 0)
shape = SubResource("CapsuleShape3D_uj7mf")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(-0.393728, 0, 0, 0, -0.393728, 0, 0, 0, 0.31716675, 0, 0.426572, 0)
layers = 2
cast_shadow = 0
gi_mode = 2
offset = Vector2(0, 323.28)
billboard = 2
alpha_cut = 2
texture_filter = 2
render_priority = 1
sprite_frames = SubResource("SpriteFrames_xc70a")
animation = &"idle"

[node name="ShadowRay" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0353857, 0)
shape = SubResource("BoxShape3D_0n276")
target_position = Vector3(0.07, -20, 0)
collide_with_areas = true

[node name="ShadowDecal" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0)
size = Vector3(2, 1, 2)
texture_albedo = ExtResource("19_0n276")
normal_fade = 0.4
cull_mask = 1048573

[node name="SpringArmPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.8660254, 0.5, 0, -0.5, 0.8660254, 0, 0.9949967, 0)
script = ExtResource("19_nos2o")
minVerticalAngle = -0.5235987755982988
maxVerticalAngle = 0.0

[node name="Camera3D" type="Camera3D" parent="SpringArmPivot" node_paths=PackedStringArray("SPRING_ARM")]
transform = Transform3D(1, 0, 0, 0, 1, -2.9802322e-08, 0, 2.9802322e-08, 1, 0, 0.100429535, 5.876098)
script = ExtResource("20_66bo7")
SPRING_ARM = NodePath("../SpringArm3D/SpringPosition")
LERP_POWER = 10.0

[node name="SpringArm3D" type="SpringArm3D" parent="SpringArmPivot"]
transform = Transform3D(1, 0, 0, 0, 0.9999996, 0, 0, 0, 0.9999996, 0, 0, 0)
collision_mask = 9
shape = SubResource("SphereShape3D_66bo7")
spring_length = 6.0

[node name="SpringPosition" type="Node3D" parent="SpringArmPivot/SpringArm3D"]

[node name="pStateMachine" type="Node" parent="." node_paths=PackedStringArray("INITIAL_STATE")]
script = ExtResource("5_s7f3b")
INITIAL_STATE = NodePath("pIdle")

[node name="pIdle" type="Node" parent="pStateMachine" node_paths=PackedStringArray("FALL_STATE", "RUN_STATE")]
script = ExtResource("6_6unfe")
FALL_STATE = NodePath("../pJump")
RUN_STATE = NodePath("../pRun")
ANIMATION_NAME = "idle"
metadata/_custom_type_script = "uid://bbk7hmc17x0uu"

[node name="pRun" type="Node" parent="pStateMachine" node_paths=PackedStringArray("IDLE_STATE", "FALL_STATE", "spring_arm")]
script = ExtResource("7_pxja8")
IDLE_STATE = NodePath("../pIdle")
FALL_STATE = NodePath("../pJump")
spring_arm = NodePath("../../SpringArmPivot/SpringArm3D")
ANIMATION_NAME = "run"
metadata/_custom_type_script = "uid://bbk7hmc17x0uu"

[node name="pJump" type="Node" parent="pStateMachine" node_paths=PackedStringArray("IDLE_STATE", "RUN_STATE", "spring_arm")]
script = ExtResource("8_pxja8")
IDLE_STATE = NodePath("../pIdle")
RUN_STATE = NodePath("../pRun")
spring_arm = NodePath("../../SpringArmPivot/SpringArm3D")
ANIMATION_NAME = "jump"
metadata/_custom_type_script = "uid://bbk7hmc17x0uu"

[node name="pDie" type="Node" parent="pStateMachine"]
script = ExtResource("5_iadup")
metadata/_custom_type_script = "uid://bbk7hmc17x0uu"

[node name="HitboxComponent" type="Area3D" parent="." node_paths=PackedStringArray("COLLECTABLE_COMPONENT", "HEALTH_COMPONENT", "PARENT")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9949969, 0)
collision_layer = 2
collision_mask = 0
script = ExtResource("24_bxieb")
COLLECTABLE_COMPONENT = NodePath("../CollectableComponent")
HEALTH_COMPONENT = NodePath("../HealthComponent")
PARENT = NodePath("..")
metadata/_custom_type_script = "uid://de7p6bbrswxkf"

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.105026, 0)
shape = SubResource("CylinderShape3D_joi77")

[node name="HealthComponent" type="Node" parent="." node_paths=PackedStringArray("PARENT")]
script = ExtResource("11_c4hvp")
PARENT = NodePath("..")
metadata/_custom_type_script = "uid://cbytxgc3ophoe"

[node name="Attack" type="Node" parent="."]
script = ExtResource("12_2vlw4")
metadata/_custom_type_script = "uid://dwjt6qd64607k"

[node name="CollectableComponent" type="Node" parent="." node_paths=PackedStringArray("PARENT")]
script = ExtResource("27_bxieb")
PARENT = NodePath("..")

[node name="SporeAttackCooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="PauseMenu" parent="." instance=ExtResource("31_dpr6s")]
visible = false

[connection signal="pressed" from="PauseMenu/Control/Continue" to="." method="unpause"]

[editable path="PauseMenu"]
